--- a/SportsEconomics_HW.ipynb
+++ b/SportsEconomics_HW.ipynb
@@ -61,7 +61,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "from statsmodels.api import OLS , add_constant\n",
+    "from statsmodels.api import OLS\n",
     "from patsy import dmatrices\n",
     "\n",
     "\n",
@@ -83,10 +83,6 @@
     "    else :\n",
     "        continue\n",
     "    \n",
-    "\n",
-    "df['AVG'] = pd.to_numeric(df['AVG'], errors='coerce')\n",
-    "df['SLG'] = pd.to_numeric(df['AVG'], errors='coerce')\n",
-    "df['OBP'] = pd.to_numeric(df['AVG'], errors='coerce')\n",
     "df = df.dropna(subset=['Salary(100M_KRW,USDtoKRW_1250)'])\n",
     "df.info()\n"
    ]
@@ -248,6 +244,170 @@
    "source": [
     "y, X = dmatrices(\n",
     "            formula_like= 'Salary ~ AVG + G + OBP + E', \n",
+    "            data        = df.rename(\n",
+    "                                columns={'Salary(100M_KRW,USDtoKRW_1250)':'Salary'}\n",
+    "                                ),\n",
+    "            return_type ='dataframe'\n",
+    "            )\n",
+    "\n",
+    "model = OLS(y,X)\n",
+    "results = model.fit()\n",
+    "results.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>           <td>OBP</td>       <th>  R-squared:         </th> <td>   0.339</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.328</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   29.99</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Wed, 21 Aug 2024</td> <th>  Prob (F-statistic):</th> <td>3.79e-20</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>20:18:11</td>     <th>  Log-Likelihood:    </th> <td>  315.42</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>   239</td>      <th>  AIC:               </th> <td>  -620.8</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>   234</td>      <th>  BIC:               </th> <td>  -603.5</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     4</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "      <td></td>         <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th> <td>    0.1857</td> <td>    0.009</td> <td>   21.336</td> <td> 0.000</td> <td>    0.169</td> <td>    0.203</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>SB</th>        <td>    0.0004</td> <td>    0.001</td> <td>    0.495</td> <td> 0.621</td> <td>   -0.001</td> <td>    0.002</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>H</th>         <td>    0.0016</td> <td>    0.000</td> <td>    4.160</td> <td> 0.000</td> <td>    0.001</td> <td>    0.002</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>G</th>         <td>   -0.0002</td> <td>    0.000</td> <td>   -0.740</td> <td> 0.460</td> <td>   -0.001</td> <td>    0.000</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>R</th>         <td>   -0.0011</td> <td>    0.001</td> <td>   -1.529</td> <td> 0.128</td> <td>   -0.003</td> <td>    0.000</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>45.256</td> <th>  Durbin-Watson:     </th> <td>   1.562</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td> <th>  Jarque-Bera (JB):  </th> <td> 324.967</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td> 0.452</td> <th>  Prob(JB):          </th> <td>2.72e-71</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 8.640</td> <th>  Cond. No.          </th> <td>    230.</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}    &       OBP        & \\textbf{  R-squared:         } &     0.339   \\\\\n",
+       "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.328   \\\\\n",
+       "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     29.99   \\\\\n",
+       "\\textbf{Date:}             & Wed, 21 Aug 2024 & \\textbf{  Prob (F-statistic):} &  3.79e-20   \\\\\n",
+       "\\textbf{Time:}             &     20:18:11     & \\textbf{  Log-Likelihood:    } &    315.42   \\\\\n",
+       "\\textbf{No. Observations:} &         239      & \\textbf{  AIC:               } &    -620.8   \\\\\n",
+       "\\textbf{Df Residuals:}     &         234      & \\textbf{  BIC:               } &    -603.5   \\\\\n",
+       "\\textbf{Df Model:}         &           4      & \\textbf{                     } &             \\\\\n",
+       "\\textbf{Covariance Type:}  &    nonrobust     & \\textbf{                     } &             \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "                   & \\textbf{coef} & \\textbf{std err} & \\textbf{t} & \\textbf{P$> |$t$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{Intercept} &       0.1857  &        0.009     &    21.336  &         0.000        &        0.169    &        0.203     \\\\\n",
+       "\\textbf{SB}        &       0.0004  &        0.001     &     0.495  &         0.621        &       -0.001    &        0.002     \\\\\n",
+       "\\textbf{H}         &       0.0016  &        0.000     &     4.160  &         0.000        &        0.001    &        0.002     \\\\\n",
+       "\\textbf{G}         &      -0.0002  &        0.000     &    -0.740  &         0.460        &       -0.001    &        0.000     \\\\\n",
+       "\\textbf{R}         &      -0.0011  &        0.001     &    -1.529  &         0.128        &       -0.003    &        0.000     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\textbf{Omnibus:}       & 45.256 & \\textbf{  Durbin-Watson:     } &    1.562  \\\\\n",
+       "\\textbf{Prob(Omnibus):} &  0.000 & \\textbf{  Jarque-Bera (JB):  } &  324.967  \\\\\n",
+       "\\textbf{Skew:}          &  0.452 & \\textbf{  Prob(JB):          } & 2.72e-71  \\\\\n",
+       "\\textbf{Kurtosis:}      &  8.640 & \\textbf{  Cond. No.          } &     230.  \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{OLS Regression Results}\n",
+       "\\end{center}\n",
+       "\n",
+       "Notes: \\newline\n",
+       " [1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                    OBP   R-squared:                       0.339\n",
+       "Model:                            OLS   Adj. R-squared:                  0.328\n",
+       "Method:                 Least Squares   F-statistic:                     29.99\n",
+       "Date:                Wed, 21 Aug 2024   Prob (F-statistic):           3.79e-20\n",
+       "Time:                        20:18:11   Log-Likelihood:                 315.42\n",
+       "No. Observations:                 239   AIC:                            -620.8\n",
+       "Df Residuals:                     234   BIC:                            -603.5\n",
+       "Df Model:                           4                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "Intercept      0.1857      0.009     21.336      0.000       0.169       0.203\n",
+       "SB             0.0004      0.001      0.495      0.621      -0.001       0.002\n",
+       "H              0.0016      0.000      4.160      0.000       0.001       0.002\n",
+       "G             -0.0002      0.000     -0.740      0.460      -0.001       0.000\n",
+       "R             -0.0011      0.001     -1.529      0.128      -0.003       0.000\n",
+       "==============================================================================\n",
+       "Omnibus:                       45.256   Durbin-Watson:                   1.562\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):              324.967\n",
+       "Skew:                           0.452   Prob(JB):                     2.72e-71\n",
+       "Kurtosis:                       8.640   Cond. No.                         230.\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y, X = dmatrices(\n",
+    "            formula_like= 'OBP ~ SB + H + G + R', \n",
     "            data        = df.rename(\n",
     "                                columns={'Salary(100M_KRW,USDtoKRW_1250)':'Salary'}\n",
     "                                ),\n",
